# radeon_raytracing_analyzer

./: .clang-format  .gitattributes  .gitignore  .readthedocs.yaml  BUILD.md  Buildinfo.properties.in  CMakeLists.txt  LICENSE.txt  License.txt  NOTICES.txt  README.md  RELEASE_NOTES.txt  Release_Notes.txt
source/backend/: CMakeLists.txt  api_info.cpp  api_info.h  asic_info.cpp  asic_info.h  math_util.cpp  math_util.h  rra_api_info.cpp  rra_asic_info.cpp  rra_assert.cpp  rra_async_ray_history_loader.cpp  rra_blas.cpp  rra_blas_impl.h  rra_bvh.cpp  rra_bvh_impl.h  rra_configuration.h  rra_data_set.cpp  rra_data_set.h  rra_print.cpp  rra_ray_history.cpp  rra_rtip_info.cpp  rra_system_info.cpp  rra_tlas.cpp  rra_tlas_impl.h  rra_trace_loader.cpp  string_table.cpp  string_table.h  surface_area_heuristic.cpp  surface_area_heuristic.h  user_marker_history.cpp  user_marker_history.h
source/backend/bvh/: bvh_bundle.cpp  bvh_bundle.h  bvh_index_reference_map.cpp  bvh_index_reference_map.h  dxr_definitions.h  dxr_type_conversion.cpp  dxr_type_conversion.h  encoded_rt_ip_11_bottom_level_bvh.cpp  encoded_rt_ip_11_bottom_level_bvh.h  encoded_rt_ip_11_top_level_bvh.cpp  encoded_rt_ip_11_top_level_bvh.h  flags_util.h  geometry_info.cpp  geometry_info.h  gpu_def.h  ibvh.cpp  ibvh.h  iencoded_rt_ip_11_bvh.cpp  iencoded_rt_ip_11_bvh.h  irt_ip_11_acceleration_structure_header.cpp  irt_ip_11_acceleration_structure_header.h  irt_ip_11_acceleration_structure_post_build_info.cpp  irt_ip_11_acceleration_structure_post_build_info.h  metadata_v1.cpp  metadata_v1.h  node_pointer.cpp  node_pointer.h  parent_block.cpp  parent_block.h  rt_binary_file_defs.cpp  rt_binary_file_defs.h  utils.cpp  utils.h
source/backend/linux/: safe_crt.cpp
source/backend/public/: rra_api_info.h  rra_asic_info.h  rra_assert.h  rra_async_ray_history_loader.h  rra_blas.h  rra_bvh.h  rra_error.h  rra_macro.h  rra_print.h  rra_ray_history.h  rra_rtip_info.h  rra_system_info.h  rra_tlas.h  rra_trace_loader.h
source/backend/ray_history/: counter.h  loader.cpp  loader.h  ray_history.cpp  ray_history.h  raytracing_counter.h
source/frontend/: CMakeLists.txt  constants.h  dark_mode_stylesheet.qss  light_mode_stylesheet.qss  main.cpp  resources.qrc  stylesheet.qss  version.cpp  version.h  version.h.in
source/frontend/io/: axis_free_camera_controller.cpp  axis_free_camera_controller.h  cad_camera_controller.cpp  cad_camera_controller.h  camera_controllers.cpp  camera_controllers.h  fps_camera_controller.cpp  fps_camera_controller.h  viewer_io.cpp  viewer_io.h
source/frontend/mac_osx/: MacOSXBundleInfo.plist.in  rra.icns
source/frontend/managers/: load_animation_manager.cpp  load_animation_manager.h  message_manager.cpp  message_manager.h  navigation_manager.cpp  navigation_manager.h  pane_manager.cpp  pane_manager.h  trace_manager.cpp  trace_manager.h
source/frontend/models/: acceleration_structure_flags_table_item_delegate.cpp  acceleration_structure_flags_table_item_delegate.h  acceleration_structure_flags_table_item_model.cpp  acceleration_structure_flags_table_item_model.h  acceleration_structure_tree_view_item.cpp  acceleration_structure_tree_view_item.h  acceleration_structure_tree_view_item_delegate.cpp  acceleration_structure_tree_view_item_delegate.h  acceleration_structure_tree_view_model.cpp  acceleration_structure_tree_view_model.h  acceleration_structure_viewer_model.cpp  acceleration_structure_viewer_model.h  instance_list_table_item_delegate.cpp  instance_list_table_item_delegate.h  instances_item_model.cpp  instances_item_model.h  instances_proxy_model.cpp  instances_proxy_model.h  scene.cpp  scene.h  scene_collection_model.cpp  scene_collection_model.h  scene_node.cpp  scene_node.h  table_item_delegate.cpp  table_item_delegate.h  table_proxy_model.cpp  table_proxy_model.h  tree_view_proxy_model.cpp  tree_view_proxy_model.h  viewer_container_model.cpp  viewer_container_model.h
source/frontend/settings/: geometry_settings.cpp  geometry_settings.h  settings.cpp  settings.h  settings_reader.cpp  settings_reader.h  settings_writer.cpp  settings_writer.h
source/frontend/util/: file_util.cpp  file_util.h  log_file_writer.cpp  log_file_writer.h  rra_util.cpp  rra_util.h  stack_vector.h  string_util.cpp  string_util.h
source/frontend/views/: acceleration_structure_tree_view.cpp  acceleration_structure_tree_view.h  acceleration_structure_viewer_pane.cpp  acceleration_structure_viewer_pane.h  base_pane.cpp  base_pane.h  debug_window.cpp  debug_window.h  debug_window.ui  license_dialog.cpp  license_dialog.h  license_dialog.ui  main_window.cpp  main_window.h  main_window.ui  viewer_container_widget.cpp  viewer_container_widget.h  viewer_container_widget.ui  widget_util.cpp  widget_util.h
source/frontend/windows/: resource.h  rra.rc
source/renderer/: CMakeLists.txt  camera.cpp  graphics_context.cpp  heatmap.cpp  intersect.cpp  intersect_min_max.cpp  orientation_gizmo.cpp  renderer_interface.cpp  renderer_widget.cpp  shared.cpp
source/renderer/public/: camera.h  graphics_context.h  heatmap.h  include_vma.h  intersect.h  intersect_min_max.h  orientation_gizmo.h  render_state_adapter.h  renderer_adapter.h  renderer_interface.h  renderer_types.h  renderer_widget.h  shared.h  view_state_adapter.h
source/renderer/shaders/: BoundingVolumeHierarchyWire.hlsl  Clear.hlsl  Common.hlsl  GeometryColorAllowCompactionFlag.hlsl  GeometryColorAllowUpdateFlag.hlsl  GeometryColorBlasAverageDepth.hlsl  GeometryColorBlasAverageSAH.hlsl  GeometryColorBlasInstanceCount.hlsl  GeometryColorBlasInstanceId.hlsl  GeometryColorBlasMaxDepth.hlsl  GeometryColorBlasMinSAH.hlsl  GeometryColorBlasTriangleCount.hlsl  GeometryColorFinalOpacity.hlsl  GeometryColorGeometryIndex.hlsl  GeometryColorInstanceIndex.hlsl  GeometryColorInstanceMask.hlsl  GeometryColorLit.hlsl  GeometryColorLowMemoryFlag.hlsl  GeometryColorOpacity.hlsl  GeometryColorPreferFastBuildOrTrace.hlsl  GeometryColorRebraiding.hlsl  GeometryColorTechnical.hlsl  GeometryColorTreeLevel.hlsl  GeometryColorTriangleIndex.hlsl  GeometryColorTriangleSAH.hlsl  GeometryColorWireframe.hlsl  (+14 more)
(+406 files in other folders)
